rest api docker file

--- a/rest-api-latest/Dockerfile
+++ b/rest-api-latest/Dockerfile
@@ -1,9 +1,26 @@
-FROM node:8 as build
-WORKDIR /app
-COPY package.json server.js data.json /controllers /models  /routes /src  /app/
+#FROM node:8 as build
+#WORKDIR /app
+#COPY package.json server.js package-lock.json data.json /controllers /models  /routes /src  ./
+#RUN npm install
+
+#FROM gcr.io/distroless/nodejs
+#COPY --from=build /app /
+#EXPOSE 3000
+#CMD [ "npm", "start" ]
+
+FROM node:boron
+
+# Create app directory
+RUN mkdir -p /usr/src/app
+WORKDIR /usr/src/app
+
+# Install app dependencies
+COPY package.json /usr/src/app/
 RUN npm install
 
-FROM gcr.io/distroless/nodejs
-COPY --from=build /app /
+# Bundle app source
+COPY server.js data.json controllers/ models/  routes/ src/ /usr/src/app/
+
 EXPOSE 3000
+
 CMD [ "npm", "start" ]
