adding additional method to restapi

--- a/rest-api-latest/Dockerfile
+++ b/rest-api-latest/Dockerfile
@@ -1,26 +1,13 @@
-#FROM node:8 as build
-#WORKDIR /app
-#COPY package.json server.js package-lock.json data.json /controllers /models  /routes /src  ./
-#RUN npm install
-
-#FROM gcr.io/distroless/nodejs
-#COPY --from=build /app /
-#EXPOSE 3000
-#CMD [ "npm", "start" ]
-
-FROM node:boron
-
+FROM node
 # Create app directory
-RUN mkdir -p /usr/src/app
+#RUN mkdir -p /usr/src/app && mkdir -p /usr/src/app/src
 WORKDIR /usr/src/app
-
 # Install app dependencies
-COPY package.json /usr/src/app/
+COPY package.json server.js data.json /usr/src/app/
 RUN npm install
 
 # Bundle app source
-COPY server.js data.json controllers/ models/  routes/ src/ /usr/src/app/
-
+#COPY server.js data.json /usr/src/app/
+COPY src/ /usr/src/app/src/
 EXPOSE 3000
-
 CMD [ "npm", "start" ]
