--- a/rest-api-latest/package.json
+++ b/rest-api-latest/package.json
@@ -16,6 +16,8 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "got": "^8.2.0",
+    "lodash": "^4.17.5",
+    "memoizee": "^0.4.12",
     "node-fetch": "^2.0.0"
   },
   "devDependencies": {
